# gaussian_binomial_package

./: LICENSE  README.md  setup.py
gauss_binomial_probability/: license  setup.cfg
