[metadata]
name = Gaussial-binomial-probability
version = 1.5
author = Jainish Shah
author_email = jainishnikul2525@gmail.com
description = My package description
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
